# distributed-calculator

./: .gitignore  .space.kts  README.md  deps.sh  dev-env-warmup.sh  incorrect-operands.json  start-service.sh  stop-services.sh  validate-services.sh
.fleet/: run.json
.space/: .space.kts  devfile.yaml  init-dev-env.sh
cpp/: .gitignore  CMakeLists.txt  conanfile.txt
cpp/src/: calc.cpp
csharp/: Dockerfile  Program.cs  Subtract.csproj
csharp/.fleet/: run.json
csharp/Controllers/: CSharpCalculatorController.cs  SubtractController.cs
csharp/Models/: Operands.cs
csharp/Properties/: launchSettings.json
go/: app.go
go/.fleet/: run.json
java/: settings.gradle.kts
java/app/: build.gradle.kts
java/app/src/main/java/com/example/adderapp/: AdditionHelper.java  App.java  Operands.java
kotlin/: settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/divideapp/: App.kt
node/: package-lock.json  package.json
node/.fleet/: run.json
php/: .env  composer.json
php/config/routes/: attributes.yaml
php/src/Controller/: SubtractController.php
python/: Pipfile  app.py
python/.fleet/: run.json  settings.json
react-calculator/: package-lock.json  package.json  server.js
react-calculator/.fleet/: run.json
react-calculator/client/: package-lock.json  package.json
react-calculator/client/public/: index.html
react-calculator/client/src/component/: App.js  Button.css  Button.js  ButtonPanel.js
react-calculator/client/src/logic/: calculate.js  operate.js
rust/: Cargo.toml
rust/.fleet/: run.json
rust/src/: main.rs
(+9 files in other folders)
